<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_entry_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/record_entry"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/record_entry"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/edit_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:ems="10"
      android:hint="@string/title_label"
      android:inputType="text"
      android:minHeight="48dp"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/record_entry" />

  <Button
      android:id="@+id/btn_entry_date"
      style="?android:buttonBarButtonStyle"
      android:layout_width="146dp"
      android:layout_height="55dp"
      android:layout_marginTop="8dp"
      android:text="@string/date"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_title" />

  <Button
      android:id="@+id/btn_start_time"
      style="?android:buttonBarButtonStyle"
      android:layout_width="131dp"
      android:layout_height="50dp"
      android:layout_marginTop="16dp"
      android:text="@string/start_time"
      android:textSize="17sp"
      app:layout_constraintEnd_toStartOf="@+id/textView"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_entry_date" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/to"
      app:layout_constraintBottom_toBottomOf="@+id/btn_start_time"
      app:layout_constraintEnd_toStartOf="@+id/btn_end_time"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/btn_start_time"
      app:layout_constraintTop_toTopOf="@+id/btn_start_time" />

  <Button
      android:id="@+id/btn_end_time"
      style="?android:buttonBarButtonStyle"
      android:layout_width="135dp"
      android:layout_height="50dp"
      android:text="@string/end_time"
      android:textSize="17sp"
      app:layout_constraintBottom_toBottomOf="@+id/textView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/textView"
      app:layout_constraintTop_toTopOf="@+id/textView"
      app:layout_constraintVertical_bias="0.521" />

  <Button
      android:id="@+id/btn_save"
      android:layout_width="115dp"
      android:layout_height="52dp"
      android:layout_marginTop="24dp"
      android:text="@string/save_label"
      android:textSize="17sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>