<resources>
  <string name="app_name">JournalApp</string>
  <string name="add_entry">Add a new entry</string>
  <string name="title_label">Title</string>
  <string name="date">Date</string>
  <string name="start_time">Start Time</string>
  <string name="end_time">End Time</string>
  <string name="save_label">Save</string>
  <string name="to">To</string>
  <string name="record_entry">Record Entry</string>
  <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
  <string name="okay">OKAY</string>
  <string name="dltConfirm">Do you want to delete this entry</string>
  <string name="yes">YES</string>
  <string name="no">NO</string>
</resources>