<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/info_item"
        android:icon="@drawable/info_icon"
        android:title="Info"
        app:showAsAction="ifRoom" />
</menu>